src/test/deca/context/invalid/acces_inexistant.deca
// Description :
// Accès à un attribut qui n existe pas.
//
// Resultats :
// Echec
class Ballon {
    int pression;
}

{
    Ballon b;
    b = new Ballon();
    b.couleur = 1;
}
